poke/testsuite/poke.pkl/eq-arrays-diag-4.pk
/* { dg-do compile } */

defvar e = [1,2] == ["foo","bar"]; /* { dg-error "invalid.*\n.*expected" } */
